--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0,minimum-scale=1.0">
 
 <head>
+    <script src="js/jquery-1.4.3.min.js"></script>
+    <script src="js/fancybox/jquery.fancybox-1.3.4.js"></script>
+    <script src="js/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+    <script src="js/fancybox/jquery.easing-1.3.pack.js"></script>
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox-1.3.4.css" media="screen">
     <link rel="stylesheet" href="css/mystylefancybox.css">
 
     <title>plugin fancybox</title>
