Desde js modificamos las propiedades de la funcion fancybox, para dotar de animación a nuestras imágenes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/fancybox/jquery.fancybox-1.3.4.js"></script>
     <script src="js/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
     <script src="js/fancybox/jquery.easing-1.3.pack.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="js/fancybox/jquery.fancybox-1.3.4.css" media="screen">
     <link rel="stylesheet" href="css/mystylefancybox.css">
 
